--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,18 @@
 ---
 # defaults file for ansible-cyberos
-cyberos_work_dir: /data
+
+bc_name: cyberos
+bc_component_name: "default" # may be: wallet, nodeos-boot, nodeos-prod, nodeos-nonprod
+bc_path_general: "/opt/{{ bc_name }}"
+bc_path_data: "{{ bc_path_general }}/{{ bc_component_name }}/data/"
+bc_path_config: "{{ bc_path_general }}/{{ bc_component_name }}/config"
+bc_path_state: "{{ bc_path_general }}/{{ bc_component_name }}/state"
+
+bc_cyberos:
+  wallet:
+    data_dir: /data/
+
+work_dir: /data
 pref_dir: /opt/prefdir
 
 boot:
