--- a/tasks/blockchain/cyberos/boot.yml
+++ b/tasks/blockchain/cyberos/boot.yml
@@ -33,6 +33,8 @@
     - bc_cyberos_node_http_port
     - bc_cyberos_node_p2p_port
     - bc_cyberos_node_bnet_port
+  tags:
+    - debug
 
 - name: Start boot-node container
   docker_container:
@@ -57,6 +59,8 @@
     var: "{{item}}"
   with_items:
     - bc_cyberos_boot.pvt_key
+  tags:
+    - debug
 
 - name: import producer key into wallet
   shell:
@@ -68,7 +72,11 @@
 
 - debug:
     msg: "{{ import_producer_key.stderr_lines }}"
+  tags:
+    - debug
 - debug: var=import_producer_key.stdout_lines
+  tags:
+    - debug
 
 - pause:
     seconds: 25
@@ -87,6 +95,8 @@
   debug:
     msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
   loop: "{{ create_system_accounts.results }}"
+  tags:
+    - debug
 
 - name: copy contracts
   copy:
@@ -106,6 +116,8 @@
   debug:
     msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
   loop: "{{ set_code_system_contracts.results }}"
+  tags:
+    - debug
 
 - name: set abi system contracts
   loop: "{{ bc_cyberos_system_contracts }}"
@@ -120,6 +132,8 @@
   debug:
     msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
   loop: "{{ set_abi_system_contracts.results }}"
+  tags:
+    - debug
 
 - name: create token
   register: create_token
@@ -131,6 +145,8 @@
 - name: Show stderr from create token task
   debug:
     msg: "DEBUG: \n stderr:{{ create_token.stderr }}\n stdout:{{ create_token.stdout }}"
+  tags:
+    - debug
 
 - name: allocate tokens
   register: allocate_tokens
@@ -142,6 +158,8 @@
 - name: Show stderr from allocate tokens task
   debug:
     msg: "DEBUG: \n stderr:{{ allocate_tokens.stderr }}\n stdout:{{ allocate_tokens.stdout }}"
+  tags:
+    - debug
 
 - name: create producers account
   loop: "{{ bc_cyberos_producer_accounts }}"
@@ -155,7 +173,8 @@
   debug:
     msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
   loop: "{{ create_producers_account.results }}"
-  when: bc_debug
+  tags:
+    - debug
 
 - name: form producers list
   loop: "{{ bc_cyberos_producer_accounts | list }}"
@@ -172,3 +191,5 @@
 - name: Show stderr from create system accounts task
   debug:
     msg: "DEBUG: \n stderr:{{ set_producers.stderr }}\n stdout:{{ set_producers.stdout }}"
+  tags:
+    - debug
