--- a/tasks/blockchain/cyberos/wallet.yml
+++ b/tasks/blockchain/cyberos/wallet.yml
@@ -35,6 +35,10 @@
 
 - debug:
     msg: "{{ create_wallet.stderr_lines }}"
+  tags:
+    - debug
 
 - debug:
     msg: "{{ create_wallet.stdout_lines }}"
+  tags:
+    - debug
