--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,41 @@
 ---
 # tasks file for ansible-cyberos
+- name: "Collect facts about all targets"
+  tags:
+    - debug
+    - network
+  run_once: true
+  setup:
+  delegate_to: "{{ item }}"
+  delegate_facts: True
+  loop: "{{ groups['all'] }}"
+
+- name: "Add boot node to group bcboot"
+  tags:
+    - debug
+    - network
+  delegate_to: "{{ item }}"
+  run_once: true
+  add_host:
+    name: "{{ inventory_hostname }}"
+    groups: bcboot
+  loop: "{{ groups['all'] }}"
+  when:
+    - bc_cyberos_comp_state.boot == "present"
+
+- name: "Set peers ip addresses"
+  run_once: true
+  tags:
+    - debug
+    - network
+  set_fact:
+    bc_list_of_peers: "{{ groups['bcboot'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+
+- name: Show debug variables
+  tags:
+    - never
+    - debug
+  include_tasks: "debug/show-state.yml"
 
 - name: Login to docker registry
   include_tasks: "docker/registry.yml"
