--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,13 +23,13 @@
   when:
     - bc_cyberos_comp_state.boot == "present"
 
-- name: "Set peers ip addresses"
+- name: "Set boot ip address"
   run_once: true
   tags:
     - debug
     - network
   set_fact:
-    bc_list_of_peers: "{{ groups['bcboot'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+    bc_list_of_boot: "{{ groups['bcboot'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
 
 - name: Show debug variables
   tags:
