--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,29 +1,5 @@
 ---
 # tasks file for ansible-cyberos
-- name: "Add boot node to group bcboot"
-  tags:
-    - debug
-    - network
-  delegate_to: 127.0.0.1
-  run_once: true
-  add_host:
-    name: "{{ item }}"
-    groups: bcboot
-  loop: "{{ groups['all'] }}"
-  when: '"boot" in item'
-
-- name: "Add all nodes to group bcpeers"
-  tags:
-    - debug
-    - network
-  delegate_to: 127.0.0.1
-  run_once: true
-  add_host:
-    name: "{{ item }}"
-    groups: bcpeers
-  loop: "{{ groups['all'] }}"
-  when: '"prod" in item or "boot" in item'
-
 - name: "Collect facts about all targets"
   tags:
     - debug
@@ -33,6 +9,38 @@
   delegate_to: "{{ item }}"
   delegate_facts: True
   loop: "{{ groups['all'] }}"
+
+- name: "Add boot node to group bcboot"
+  tags:
+    - debug
+    - network
+  delegate_to: "{{ item }}"
+  run_once: true
+  add_host:
+    name: "{{ item }}"
+    groups: bcboot
+  loop: "{{ groups['all'] }}"
+  when: '"boot" in hostvars[item]["ansible_hostname"]'
+
+- name: "List hosts in groups all"
+  tags:
+    - never
+    - debug
+    - network
+  debug:
+    msg: "{{ groups['all'] }}"
+
+- name: "Add all nodes to group bcpeers"
+  tags:
+    - debug
+    - network
+  delegate_to: "{{ item }}"
+  run_once: true
+  add_host:
+    name: "{{ item }}"
+    groups: bcpeers
+  loop: "{{ groups['all'] }}"
+  when: '"prod" in hostvars[item]["ansible_hostname"] or "boot" in hostvars[item]["ansible_hostname"]'
 
 - name: "Set boot ip address"
   run_once: true
