--- a/tasks/blockchain/cyberos/prod.yml
+++ b/tasks/blockchain/cyberos/prod.yml
@@ -66,7 +66,7 @@
     ports:
       - "{{ bc_cyberos_node_http_port }}"
       - "{{ bc_cyberos_node_p2p_port }}"
-      - "{{ bc_cyberos_node_bnet_port }}"
+      - 0.0.0.0:{{ bc_cyberos_node_bnet_port }}:4321
     volumes:
       - "{{ bc_path_state }}:/root/.local"
       - "{{ bc_path_config }}:{{ bc_path_config }}"
