--- a/requirements.yml
+++ b/requirements.yml
@@ -6,3 +6,7 @@
 - src: https://github.com/geerlingguy/ansible-role-pip
   version: master
   name: geerlingguy.pip
+
+- src: https://github.com/cyber-os/ansible-promstack
+  version: master
+  name: ansible-promstack
